add setup script

--- a/brightness.service
+++ b/brightness.service
@@ -1,16 +1,13 @@
 [Unit]
 Description = Monitor brightness controller service
-After = graphical.target
  
 [Service]
 Type = simple
-ExecStart = python3 /home/maxou/Documents/Projects/monitor-smart-brightness/pc/daemon.py
-User = maxou
-Group = maxou
+ExecStart = python3 $HOME/.monitor-brightness-controller/daemon.py
 Restart = on-failure
 SyslogIdentifier = BrightnessController
 RestartSec = 5
 TimeoutStartSec = infinity
  
 [Install]
-WantedBy = multi-user.target
+WantedBy = default.target
